Name:                system-io-write
Version:             0.1.0.0
Synopsis:            Compile-time abstraction of writing of a bounded number of bytes to memory

Description:         
                     The main use of the /Write/ abstraction provided by this
                     library is to share the implementation of encodings of
                     Haskell values where the maximal number of bytes written
                     is /independent/ of the value being encoded.
                     This is a low-level library.
                     In most cases you do not need to use Writes directly.
                     Instead, you can just use the encodings provided by the
                     bytestring builders of the 'bytestring' library. 
                     .
                     Apart from types and combinators for defining Writes, the
                     'system-io-write' library also provides Writes for
                     standard encodings of standard Haskell types. 
                     The reason for implementing these encodings as Writes is
                     to provide a direct and very efficient translation of
                     standard Haskell values to their encoding as a sequence of
                     bytes in memory.
                     .
                     Currently, the library supports the 
                     following encodings.
                     .
                       - Big-endian, little-endian, and host-endian encoding of 
                         fixed-width integers.
                     .
                       - ASCII and UTF-8 encoding of characters.
                     .
                       - Hexadecimal encoding of fixed-width integers using ASCII
                         or UTF-8 encoded characters.
                     .
                     Support for the following encodings is planned.
                     .
                       - UTF-16 and UTF-32 character encoding in both the
                         little-endian as well as the big-endian variant.
                     .
                       - Decimal encoding of integers using the supported
                         character encodings.
                     .
                       - Binary, decimal, and hexadecimal encodings of 'Float'
                         and 'Double' values.
                     .
                     Note that using Writes is no guarantee for efficiency.
                     They can easily be used in ways that result in bad
                     performance.  The 'System.IO.Write.Bench' module helps you
                     with benchmarking your Writes.  Moreover, if you implement
                     a Write using the unsafe Write API, then all safety belts
                     are off.  You are writing code that may lead to the next
                     buffer overflow attack on a Haskell application.  The
                     'System.IO.Write.Test' module supports you in getting some
                     safety back by testing your Writes thoroughly.

Author:              Simon Meier, Jasper Van der Jeugt
Copyright:           2010, 2011 Simon Meier
                     2010 Jasper Van der Jeugt
Maintainer:          Simon Meier <iridcode@gmail.com>

License:             BSD3
License-file:        LICENSE

Homepage:            http://github.com/meiersi/system-io-write
Bug-Reports:         http://github.com/meiersi/system-io-write/issues
Stability:           Experimental

Category:            System, Codec
Build-type:          Simple
Cabal-version:       >= 1.6

Extra-source-files:  
                     README.markdown
                     CHANGES

Source-repository head
  Type: git
  Location: https://github.com/meiersi/system-io-write.git

Library
  ghc-options:       -Wall

  hs-source-dirs:    src

  exposed-modules:   System.IO.Write
                     System.IO.Write.Int
                     System.IO.Write.Word
                     -- System.IO.Write.Floating
                     System.IO.Write.Char.Utf8
                     System.IO.Write.Char.Ascii
                     System.IO.Write.Internal
                     System.IO.Write.Test
                     System.IO.Write.Bench

  other-modules:     System.IO.Write.Internal.UncheckedShifts
                     System.IO.Write.Internal.Region
                     System.IO.Write.Internal.Base16
  
  build-depends:     base == 4.*
